# discord-anki-hanguru

./: .gitignore  pyproject.toml
src/anki_connect/: __init__.py  create_card.py
tests/: test_kankord.py
